Bug 1397331 - Reduce the number of QI done in nsMultiplexInputStream using counters, r=smaug